syntax = "proto3";

package metadpb;

service Metad {
    rpc RegisterClient (stream RegisterClientReq) returns (stream RegisterClientRsp) {}
    rpc RegisterNode (stream RegisterNodeReq) returns (stream RegisterNodeRsp) {}
    rpc CreateNamespace (CreateNamespaceReq) returns (CreateNamespaceRsp) {}
    rpc DropNamespace (DropNamespaceReq) returns (DropNamespaceRsp) {}
    rpc AddNodeToNamespace (AddNodeToNamespaceReq) returns (AddNodeToNamespaceRsp) {}
    rpc RemoveNodeFromNamespace (RemoveNodeFromNamespaceReq) returns (RemoveNodeFromNamespaceRsp) {}
    //rpc ReplaceNodeInNamespace (ReplaceNodeInNamespaceReq) returns (ReplaceNodeInNamespaceRsp) {}
    rpc AutoBalance (AutoBalanceReq) returns (AutoBalanceRsp) {}
    rpc MigrateShard (MigrateShardReq) returns (MigrateShardRsp) {}
    rpc Info (InfoReq) returns (InfoRsp) {}
    rpc Commit (CommitReq) returns (CommitRsp) {}
}

message RegisterClientReq {
    string namespace = 1;
}

message RegisterClientRsp {
    Metadata table = 1;
}

message RegisterNodeReq {
    enum Type {
        RegisterShard = 0;
        UnregisterShard = 1;
        Heartbeat = 2;
    }
    Type type = 1;
    string addr = 2;
    string shardID = 3;
}

message RegisterNodeRsp {
    enum Type {
        CreateShard = 0;
        RemoveShard = 1;
    }
    Type type = 1;
    string shardID = 2;
}

message CreateNamespaceReq {
    string namespace = 1;
    uint32 shardNum = 2;
    uint32 replicaFactor = 3;
}

message CreateNamespaceRsp {
}

message DropNamespaceReq {
    string namespace = 1;
}

message DropNamespaceRsp {
}

message AddNodeToNamespaceReq {
    string namespace = 1; 
    string addr = 2; 
    string adminAddr = 3;
}

message AddNodeToNamespaceRsp {
}

message RemoveNodeFromNamespaceReq {
    string namespace = 1;
    string addr = 2;
}

message RemoveNodeFromNamespaceRsp {
}

message ReplaceNodeInNamespaceReq {
    string namespace = 1;
    string oldAddr = 2;
    string newAddr = 3;
    string newAdminAddr = 4;
}

message ReplaceNodeInNamespaceRsp {
}

message AutoBalanceReq {
    string namespace = 1;
}

message AutoBalanceRsp {
}

message MigrateShardReq {
    string namespace = 1;
    uint32 groupID = 2;    
    uint32 replicaID = 3;
    string fromNode = 4;
    string toNode = 5;
}

message MigrateShardRsp {
}

message InfoReq {
    string namespace = 1;
}

message InfoRsp {
}

message CommitReq {
    string namespace = 1;
}

message CommitRsp {
}

message Metadata {
    message Shard {
        uint32 groupID = 1;
        uint32 replicaID = 2;
        string nodeAddr = 3;
    }
    string namespace = 1;
    uint32 shardNum = 2;
    uint32 replicaFactor = 3;
    repeated Shard shards = 4;
}
